# Corge

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  LICENSE  README.md  append_tests.py  canvas_draft.py  config.toml  config.toml.example  pyproject.toml  scratch_run.py  sysdesign.md
DOCS/: 02-frd.md  03-system-architecture.md  06-tui-screen-map.md  08-execution-roadmap.md  11-agent-onboarding-guide.md
Script-Factory/: README.md
acceptance/current/: acceptance-criteria-template.md
approvals/: approval-record-template.md
docs/: 00-sysdesign.md  01-prd.md  02-frd.md  02-technical-spec.md  03-future_work.md  04-functional_testing.md  04-module-contracts.md  05-state-machine.md  07-agent-loop-specification.md  09-context-engineering-spec.md  10-roadmap-future-versions.md  architecture-diagram.mermaid  donotread.md  sysdesign.md
docs/collection/: 01-prd.md  04-module-contracts.md  07-agent-loop-specification.md  08-execution-roadmap.md  12-web-llm-contributor-prompt.md
plans/current/: implementation-plan-template.md
slides/: Corge — Presentation.odp  Corge — Presentation.pptx  index.html
specs/current/: specification-template.md
src/: test_run.py
src/corge/: __init__.py  __main__.py
src/corge/agent/: __init__.py  bayesian_updater.py  coding_agent.py  heuristic_updater.py  planning_agent.py  schema_tailor.py  service.py  session.py  session_controller.py  specification_agent.py
src/corge/approval/: __init__.py  gateway.py
src/corge/artifacts/: __init__.py  store.py
src/corge/budget_manager/: __init__.py  manager.py
src/corge/context/: __init__.py  service.py  sticky_validator.py
src/corge/contracts/: __init__.py  lifecycle.py  models.py  ports.py
src/corge/knowledge_graph/: __init__.py  graph.py
src/corge/logging/: audit.py  (+2 more)
tests/: test_agent.py  test_audit_logger.py  test_budget_manager.py  test_gateway.py  test_imports.py  test_knowledge_graph.py  test_memory.py  test_prompt_assembler.py  test_public_contracts.py  test_safety.py  test_scaffold.py  test_scratch_run.py  test_tools.py
tests/agent/: test_bayesian_updater.py  test_coding_agent.py  test_heuristic_updater.py  test_planning_agent.py  test_schema_tailor.py  test_specification_agent.py  test_state_machine.py
tests/context/: test_context_port.py  test_context_service.py
tests/providers/: test_provider.py
tests/ui/: test_cli.py  test_directory_selector.py  test_freestyle_canvas.py  test_provider_config.py
(+22 files in other folders)
