[project]
name = "corge"
version = "0.1.0"
description = "Specification-driven repository-aware engineering system."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.43.0",
    "rich",
    "textual>=8.2.7",
]

[project.optional-dependencies]
tiktoken = [
    "tiktoken>=0.7",
]

[project.scripts]
corge = "corge.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"scratch_run.py" = ["E501"]
"append_tests.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

